# game10

./: .clang-format  CMakeLists.txt  ahk.ahk  fira.spritefont  game old.cpp  header.h  inter.spritefont  main.cpp  scene.blend  scene.blend1  scene.glb  shaders.hlsl  shared.h  slangc.txt  sphere.mtl  test.cpp  ybot.mtl
assets/: enemy.glb  inter.spritefont
backup/: FiraCode-Bold.fcp  FiraCode-Regular.fcp  custom.css  keybindings.json  settings.json
notes/: notes.txt  notes.typ  numpy.ipynb  symbolic.ipynb
